Bottom border on heroes. BG for home hero stopiing content flashing up

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_center-text-heroes.scss
@@ -6,6 +6,7 @@
 	max-height: 500px;
 	@include full-bg;
 	text-align: center;
+	border-bottom: 1px solid #cccccc;
 	.center-hero-text {
 		@include center;
 		width: 90%;
