--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -9,13 +9,12 @@
 // 	}
 // }
 
-.artist-filtering-block  {
-	min-height: 20em;
-}
 
 .artist-filtering-block {
     position: relative;
     background-size: cover;
+    min-height: 20em;
+    border-bottom: 1px solid #cccccc;
 }
 
 .filter-area {
