--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_filtering-block-general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_filtering-block-general.scss
@@ -8,6 +8,7 @@
 	background-repeat: repeat-x;
 	background-size: inherit;
 	text-align: center;
+	border-bottom: 1px solid #cccccc;
 	.hero-heading {
 		font-family: $serif-font;
 	}
