--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -1,5 +1,4 @@
 //individual magazine posts on archive
-
 .magazine-item {
 	border: 1px solid #dddddd;
 	margin-bottom: 2em;
@@ -31,6 +30,9 @@
 	
 	.magazine-category {
 		display: flex;
+		text-transform: uppercase;
+	    font-size: 0.8rem;
+	    letter-spacing: 1px;
 		li {
 			list-style-type: none;
 			text-transform: uppercase;
@@ -39,14 +41,15 @@
 		}
 		span.category {
 			font-weight: bold;
-			text-transform: capitalize;
+			//text-transform: capitalize;
 		}
 	}
 	span.magazine-item-copy p {
-	    font-size: 15px;
+	    font-size: 1.1rem;
 	}
 	.magazine-item-header {
 		margin: 1em 0 0 0;
+		font-size: 1.1rem;
 		
 		a {
 			color: inherit;
