Artists Page Performance accordion. Careers Accordion

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -98,7 +98,7 @@
 		margin: 25px;
 	}
 	div#schedule {
-		border-bottom: 1px solid #cccccc;
+		//border-bottom: 1px solid #cccccc;
 	}
 	.artist-navigation li {
 		display: inline;
