Various, artist single page

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_press-accordion.scss
@@ -20,3 +20,12 @@
 		border-bottom: 1px solid #cccccc;
 	}
 }
+
+@include breakpoint(small only) {
+	.press-row li.accordion-item {
+		padding: 1em 0;
+	}
+	.event-listing-details {
+	    line-height: 2;
+	}
+}
