--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -44,6 +44,10 @@
 		}
 	}
 
+	.side-bar-artist-details.contact {
+	    line-height: 30px;
+	}
+
 	.artist-details:hover {
 		.artist-name {
 			color: $red;
@@ -234,6 +238,15 @@ div.row.free-text {
     p {
     	margin: 25px 0;
     }
+}
+
+.video-meta {
+	text-transform: uppercase;
+	font-size: 0.8rem;
+	letter-spacing: 1px;
+	span.video-title {
+		font-weight: bold;
+	}
 }
 
 
