Side Bar font size reduced

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_single_artist_hero.scss
@@ -38,6 +38,13 @@ body.single.single-artists {
 	}
 }
 
+div.side-bar-text-area {
+	margin-top: $sitepadding;
+	p {
+		font-size: 1rem;
+		margin-bottom: 0;
+	}
+}
 
 //MEDIA QUERIES
 
