H4 Section Headers increase size on mobile

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -18,6 +18,13 @@
     }
 }
 
+@include breakpoint(small only){
+    .section-header  {
+        padding-bottom: 0;
+        font-size: 1.4rem;
+    }
+}
+
 div#narrow-text-page {
     max-width: 57rem;
     margin: 0 auto;
