Audio Player Tweaks

--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -14,7 +14,7 @@
     position: relative;
     background-size: cover;
     min-height: 20em;
-    border-bottom: 1px solid #cccccc;
+    //border-bottom: 1px solid #cccccc;
 }
 
 .filter-area {
