Making Artist name links elsewhere (e.g. on Tours/Projects)

--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_tours-projects.scss
@@ -189,6 +189,10 @@ img.circle-thumb {
     }
 }
 
+a.side-bar-link {
+  color: initial !important;
+}
+
 //Schedule/Accordion styles
 ul.accordion {
   margin-bottom: 0;
