--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_online-item.scss
@@ -2,7 +2,7 @@
 
 .online-item {
 	//height: 450px; //temp
-	border: 1px solid gray;
+	//border: 1px solid gray;
 	margin-bottom: 2em;
 	transition: 0.5s;
 	background-color: #ffffff;
