Further scss changes

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-quicklook-content.scss
@@ -112,3 +112,12 @@ body.post-type-archive-artists {
 .quicklook-content-links {
 	padding: $sitepadding;
 }
+
+.client-photo-wrapper {
+    position: relative;
+}
+.client-photo-wrapper:hover {
+	.overlay {
+		display: block;
+	}
+}
