--- a/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/foundation.scss
@@ -111,6 +111,7 @@
 @import "modules/online-item";
 @import "modules/press-accordion";
 @import "modules/discography-accordion";
+@import "modules/animate";
 
 
 // Components
