--- a/wp-content/themes/askonasholt2016/assets/scss/components/_events-listing.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_events-listing.scss
@@ -9,8 +9,8 @@
 	}
 }
 
-.online-performances-link {
-	button {
+//.online-performances-link {
+	button.button {
 		background-color: #fefefe;
 		color: #F2F1ED;
 		border: 1px solid #B49A81;
@@ -19,7 +19,7 @@
 		letter-spacing: 1px;
 		font-weight: bold;
 	}
-}
+//}
 
 .single-online {
 	.artist-list {
