--- a/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/templates/_front.scss
@@ -207,13 +207,13 @@
 
 
 //animating svg arrow on hover
-a.view-link {
+a.view-link, .side-bar-artist-name {
   svg {
     transition: 0.5s;
   }
 }
 
-a.view-link:hover {
+a.view-link:hover, .side-bar-artist-name:hover {
   svg {
       transform: translate(5px, 0);
   }
