--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -15748,10 +15748,9 @@ div#video-audio {
 
 div.row.free-text {
   margin: 50px auto;
+  padding: 25px 0;
   border-top: 1px solid #cccccc;
   border-bottom: 1px solid #cccccc; }
-  div.row.free-text p {
-    margin: 25px 0; }
 
 .video-meta {
   text-transform: uppercase;
@@ -17261,7 +17260,7 @@ div.side-bar-text-area {
   .events-listing .accordion {
     font-size: 19px; }
 
-.online-performances-link button {
+button.button {
   background-color: #fefefe;
   color: #F2F1ED;
   border: 1px solid #B49A81;
@@ -17588,11 +17587,11 @@ div.staff-header li {
         padding-left: 0.9375rem;
         padding-right: 0.9375rem; } }
 
-a.view-link svg {
+a.view-link svg, .side-bar-artist-name svg {
   -webkit-transition: 0.5s;
   transition: 0.5s; }
 
-a.view-link:hover svg {
+a.view-link:hover svg, .side-bar-artist-name:hover svg {
   -webkit-transform: translate(5px, 0);
       -ms-transform: translate(5px, 0);
           transform: translate(5px, 0); }
