Header Heights, BG’s etc

--- a/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_artist-details.scss
@@ -243,7 +243,7 @@ div#video-audio {
 
 //free-text area in Artist's page
 div.row.free-text {
-    margin: $sitepadding-large auto;
+    margin: $sitepadding auto 0 auto;
     padding: $sitepadding 0;
     border-top: 1px solid #cccccc;
     border-bottom: 1px solid #cccccc;
