--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -79,6 +79,7 @@
     padding-bottom: $sitepadding;
     color: $brand-red;
     font-family: $serif-font;
+    margin-bottom: 0;
     //@include grid-column(12);
     a {
         font-size: 17px;
