--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -54,6 +54,7 @@ $lightbrown:    #F2F1ED;
 $bgdarkgrey:    #262626;
 $bggrey:        #3E3E3E;
 $brand-red:     $red;
+$header-beige:  #FBFAF6;
 
 //padding  **********
 $sitepadding: 25px;
