--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_photoswipe.scss
@@ -689,8 +689,8 @@
 // JB Custom Styles *********
 //***************************
 div#image-gallery {
-    padding-bottom: 50px;
-    border-top: 1px solid #ccc;
+    //padding-bottom: 50px;
+    //border-top: 1px solid #ccc;
 
     div.gallery-image {
         height: 200px;
