--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -77,7 +77,7 @@
     //@include grid-column(12);
     padding-top: $sitepadding;
     padding-bottom: $sitepadding;
-    color: $brand-red;
+    //color: $brand-red;
     font-family: $serif-font;
     margin-bottom: 0;
     //@include grid-column(12);
