--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -44,7 +44,7 @@
 
 // JB's VARS
 $mob-header-height:   82px;
-$header-height:       135px;
+$header-height:       84px;
 
 //colors  **********
 $red:           #BA0C2F;
@@ -55,6 +55,7 @@ $bgdarkgrey:    #262626;
 $bggrey:        #3E3E3E;
 $brand-red:     $red;
 $header-beige:  #FBFAF6;
+$brand-gold:    #BE9A83;
 
 //padding  **********
 $sitepadding: 25px;
