--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -7,9 +7,8 @@ body.post-type-archive-events {
 
 .artist-filtering-block {
     position: relative;
-    @include full-bg;
     border-bottom: 1px solid #cccccc;
-
+    background: $header-beige;
 }
 
 .filter-area {
